--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "vue-multiselect": "2.0.8",
     "vue-router": "3.0.1",
     "vue-splitpane": "1.0.2",
+    "vue-wangeditor": "^1.3.10",
     "vue2-editor": "^2.5.0",
     "vuedraggable": "^2.16.0",
     "vuex": "3.0.1",
+    "wangeditor": "^3.1.1",
     "xlsx": "^0.11.16"
   },
   "devDependencies": {
